tests/basic/compile-fail.stderr
error: ERROR
 --> tests/basic/compile-fail.rs:1:1
  |
1 | compile_error!("ERROR");
  | ^^^^^^^^^^^^^^^^^^^^^^^^
